Closed Bug 1717381 Opened 3 years ago Closed 3 years ago

Deal with Uint8ClampedArray::Init failure in canvas code.

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

See dependent bug for a way this can happen.

See bug 1716641 comment 4 for a way this can happen.

I don't know what the best way to add a test for this is / whether it's
worth adding one?

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/14cae2ea659c
Deal with Uint8ClampedArray::Init failure in canvas code. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: