Bug 1717381 - Deal with Uint8ClampedArray::Init failure in canvas code. r=smaug

See bug 1716641 comment 4 for a way this can happen.

I don't know what the best way to add a test for this is / whether it's
worth adding one?

Differential Revision: https://phabricator.services.mozilla.com/D118307